[gd_scene load_steps=3 format=3 uid="uid://c2ornbo8kovah"]

[ext_resource type="Script" path="res://Scripts/yarnyoyo_item.gd" id="1_jnhkk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j15p3"]
radius = 90.0056

[node name="YarnyoyoItem" type="Node2D"]
script = ExtResource("1_jnhkk")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_j15p3")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
